<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CareZoneShopper</string>
    <string name="title">Care Zone Shopping List</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="category">Category:</string>
    <string name="category_hint">category</string>
    <string name="name">Name:</string>
    <string name="name_hint">name</string>
</resources>
