<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/category"
            android:hint="@string/category_hint"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:text="@string/name"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/name"
            android:hint="@string/name_hint"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
                android:id="@+id/delete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"/>
        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>